# cobalt_xml_merge

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
benches/: merge_benchmark.rs
src/: lib.rs  line.rs  main.rs  merger.rs  params.rs  tests.rs  xml_parsing.rs
src/tests/: asset_table.rs  chapter.rs  field_merge.rs  shop.rs  theoretical.rs
test_files/Shop/: !original.xml  Boamo.xml  Improve.xml
test_files/Shop/examples/: Boamo_Improve.xml
test_files/chapter/: !original.xml  dont-kill.xml  no-ep-music.xml  no_ep_music.xml
test_files/chapter/atomic/: dont-kill.xml  no-ep-music-full.xml  no-ep-music-infer.xml
test_files/chapter/examples/: chapter-music-dont-kill-ideal-merge.xml
