[package]
name = "cobalt_xml_merge"
version = "0.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1"
differ = { git = "https://github.com/Level0r0s/differ" }
memchr = "2.7.4"

[dev-dependencies]
criterion = "0.5"
lazy_static = "1"

[profile.bench]
lto = "thin"

[[bench]]
name = "merge_benchmark"
harness = false
